--- a/Makefile.am
+++ b/Makefile.am
@@ -384,6 +384,7 @@ TESTSUITE	= tests/testsuite
 TESTSUITE_AT	= tests/testsuite.at \
 		  tests/libtoolize.at \
 		  tests/duplicate_members.at \
+		  tests/duplicate_conv.at \
 		  tests/inherited_flags.at \
 		  tests/convenience.at \
 		  tests/link-order.at \
