* ltmain.in (shell wrapper): Do not put `"$@"' in argument to $echo.

--- a/ltmain.in
+++ b/ltmain.in
@@ -5450,7 +5450,7 @@ else
 	  ;;
 	esac
 	$echo >> $output "\
-      \$echo \"\$0: cannot exec \$program \${1+\"\$@\"}\"
+      \$echo \"\$0: cannot exec \$program \$*\"
       exit $EXIT_FAILURE
     fi
   else
