--- a/libltdl/.cvsignore
+++ b/libltdl/.cvsignore
@@ -1,21 +1,14 @@
 .deps
+.dirstamp
 .libs
+_libs
 INSTALL
-Makefile
 Makefile.in
 Makefile.am
-acinclude.m4
 aclocal.m4
 autom4te.cache
 configure
-config.*
 config-h.in
-conftest*
-install-sh
-libtool
-ltmain.sh
-missing
-mkinstalldirs
 *.lo
 *.la
 stamp-*
